--- a/react-router/src/index.css
+++ b/react-router/src/index.css
@@ -5,8 +5,11 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
+  background: linear-gradient(
+    310deg,
+    rgba(13, 48, 64, 0.835171568627451) 0%,
+    rgba(0, 0, 0, 1) 100%
+  );
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
